Layout: Prevent long author name from overflowing in items with vertical stats

--- a/youtube/static/shared.css
+++ b/youtube/static/shared.css
@@ -257,6 +257,10 @@ body{
             .stats address{
                 display: inline;
             }
+            .vertical-stats li{
+                max-height: 1.3em;
+                overflow: hidden;
+            }
 
     .item-checkbox{
         justify-self:start;
